# janot

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: cr.yaml
apps/api/: .envrc.example  .gitignore  Makefile  README.md  constant.py  ingest.py  main.py  package.json  pyproject.toml  query_data.py  vectorstore.example
apps/api/domain/query/: query_router.py
apps/api/investment/: main_app.py
apps/api/investment/backend/: main.py  schema.py
apps/api/investment/frontend/: 1_Portfolio.py
apps/api/investment/frontend/pages/: 2_Trading_Journal.py  3_Monthly_Trade.py  4_Daily_News.py  5_My_Watchlist.py  6_AI_Assistant.py
apps/api/investment/pages/: 1_Portfolio.py  2_Trading_Journal.py  3_Monthly_Trade.py  find_password_page.py  sign_in_page.py
apps/api/templates/: index.html
apps/api/utils/: supabase.py
apps/llm/: README.md  download-model.py  llama.talk.py
apps/portfollo_assistant/: README.md  main_app.py
apps/portfollo_assistant/backend/: create_ticker_list.py  database.py  financetest.py  main.py  models.py  schema.py  schemas.py  service.py
apps/portfollo_assistant/pages/: 1_Portfolio.py  2_Trading_Journal.py  3_Monthly_Trade.py  4_Daily_News.py  5_My_Watchlist.py  6_AI_Assistant.py  7_Buy_and_sell_records.py  7_buy_and_sell_records.py  find_password_page.py  login_page.py  sign_in_page.py
apps/portfollo_assistant/resources/: kor_ticker_list.csv  usa_ticker_list.csv
apps/portfollo_assistant/test/: lib_test.py
apps/web/: .env.example  .gitignore  README.md  next.config.js  package.json
(+18 files in other folders)
