[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jay Nam <siisee111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
black = "^23.3.0"
isort = "^5.12.0"
websockets = "^10.3.0"
pydantic = "^1.10.7"
langchain = "^0.0.167"
faiss-cpu = "^1.7.4"
bs4 = "^0.0.1"
unstructured = "^0.6.6"
libmagic = "^1.0"
tiktoken = "^0.4.0"
openai = "^0.27.6"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
supabase = "^1.0.3"
pypdf = "^3.8.1"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
llama-cpp-python = "^0.1.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
